--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.15.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
 }
